<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/lightBg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewOTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:fontFamily="@font/brandon_grotesque_bold"
                android:text="@string/otp_verify"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/inputNomor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/nomorHandphone"
                    style="@style/LoginTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/inputPhone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:digits="0123456789"
                        android:hint="@string/otp_phone"
                        android:inputType="number"
                        android:maxLength="13"
                        android:textSize="14sp" />
                </android.support.design.widget.TextInputLayout>

                <Spinner
                    android:id="@+id/spinnViaOTP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:drawableLeft="@drawable/ic_filter"
                    android:background="@drawable/spinnerfilter"/>

                <Button
                    android:id="@+id/btnSendOTP"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/button_bordered_dark"
                    android:text="@string/otp_request"
                    android:textAllCaps="false" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>