<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="5dp"
    android:focusableInTouchMode="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="10sp"
        android:text="@string/otp_title_input"/>
    <TextView
        android:id="@+id/textTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="15sp"
        android:textColor="@color/colorPrimary"
        android:text="30 Seconds to Mars"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">
        <com.goodiebag.pinview.Pinview
            android:id="@+id/pinview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg"
            android:layout_marginTop="20sp"
            android:gravity="center"
            android:layout_gravity="center"
            app:textSize="8sp"
            app:pinWidth="30dp"
            app:pinHeight="30dp"
            app:pinLength="6"
            app:cursorVisible="false"
            app:forceKeyboard="true"
            app:hint="0"
            app:inputType="number"
            app:password="false"
            android:outlineSpotShadowColor="@color/colorPrimary"
            android:outlineAmbientShadowColor="@color/colorPrimary"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="left"
        android:gravity="left"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Expired Date"
            android:textSize="10sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textSize="10sp"
            android:layout_marginLeft="20sp"/>
        <TextView
            android:id="@+id/txtDateExpired"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="01 January 2019"
            android:textSize="10sp"
            android:textAlignment="inherit"
            android:layout_marginLeft="20sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="left"
        android:gravity="left"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Time Expired"
            android:textSize="10sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textSize="10sp"
            android:layout_marginLeft="19sp"/>
        <TextView
            android:id="@+id/txtTimeExpired"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="24:00"
            android:textSize="10sp"
            android:textAlignment="inherit"
            android:layout_marginLeft="20sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="left"
        android:gravity="left"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:text="@string/status_deliver"
            android:textSize="10sp"
            />
        <TextView
            android:id="@+id/txtStatusDelivered"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:text="Delivered"
            android:textSize="12sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginLeft="20dp"
            android:textAlignment="viewEnd"
            />
    </LinearLayout>
    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        style="@style/btn_style"
        android:enabled="true"
        android:text="SUBMIT OTP"/>
    <Button
        android:id="@+id/btnResend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        style="@style/btn_style"
        android:enabled="false"
        android:text="@string/otp_resend"/>
</LinearLayout>