<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:cardBackgroundColor="@color/colorPrimary">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="16dp">
                    <TextView
                        android:id="@+id/tvJudul"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Info Pembayaran"
                        android:textColor="@color/white"
                        android:fontFamily="@font/karla"
                        android:textSize="18dp"
                        android:layout_weight="1"/>
                    <ImageButton
                        android:id="@+id/btnClose"
                        android:layout_width="30dp"
                        android:layout_height="20dp"
                        android:src="@drawable/outline_close_24"
                        android:tint="@color/white"
                        android:background="@color/fui_transparent"
                        android:layout_gravity="center"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginVertical="16dp"
                    android:text="1. "
                    android:textSize="14sp"
                    android:fontFamily="@font/karla"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginRight="32dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="16dp"
                        android:text="@string/infoPembayaran1"
                        android:textSize="14sp"
                        android:fontFamily="@font/karla"/>

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/lightBg">

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/rekBank"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="16dp" />

                    </android.support.v7.widget.CardView>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="16dp"
                    android:text="2. "
                    android:textSize="14sp"
                    android:fontFamily="@font/karla"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/infoPembayaran2"
                    android:textSize="14sp"
                    android:fontFamily="@font/karla"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginBottom="8dp"
                    android:text="3. "
                    android:textSize="14sp"
                    android:fontFamily="@font/karla"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="32dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/infoPembayaran3"
                    android:textSize="14sp"
                    android:fontFamily="@font/karla"/>

            </LinearLayout>

            <Button
                android:id="@+id/btnInformasiPembayaran"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginBottom="16dp"
                android:background="@color/colorPrimary"
                style="@style/btn_style"
                android:textStyle="bold"
                android:text="Konfirmasi pembayaran"
                android:textSize="16dp"
                android:textColor="@color/white"
                android:fontFamily="@font/karla"/>


        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>